<resources>
    <string name="app_name">NavigationDrawer</string>

    <string name="navi_home">Home</string>
    <string name="navi_favorite">Favorite</string>
    <string name="navi_history">History</string>
    <string name="navi_account">Account</string>
    <string name="navi_myProfile">My Profile</string>
    <string name="navi_pass">Change Password</string>

    <string name="navi_drawer_open">Open navigation drawer</string>
    <string name="navi_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_navi_home">HOME</string>
    <string name="txt_navi_favorite">FAVORITE</string>
    <string name="txt_navi_history">HISTORY</string>

    <!-- TODO: Home fragment text -->
    <string name="txt_menu_price">円</string>
    <string name="list_menu">リスト選択サンプル</string>
    <string-array name="lv_menu">
        <item>唐揚げ</item>
        <item>ハンバーグ定食</item>
        <item>生姜焼き定食</item>
        <item>ステーキ定食</item>
        <item>野菜炒め定食</item>
        <item>回鍋肉定食</item>
        <item>麻婆豆腐定食</item>
        <item>とんかつ定食</item>
        <item>ミンチカツ定食</item>
        <item>チキンかつ定食</item>
        <item>コロッケ定食</item>
        <item>焼き魚定食</item>
        <item>焼肉定食</item>
        <item>弱肉強食</item>
    </string-array>
</resources>