<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/navi_home"
            android:title="@string/navi_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/navi_favorite"
            android:title="@string/navi_favorite"
            android:icon="@drawable/ic_favorite"/>

        <item android:id="@+id/navi_history"
            android:title="@string/navi_history"
            android:icon="@drawable/ic_history"/>
    </group>
    <item android:title="@string/navi_account">
        <menu>
            <item android:id="@+id/navi_profile"
                android:title="@string/navi_myProfile"
                android:icon="@drawable/ic_person"/>

            <item android:id="@+id/navi_change_pass"
                android:title="@string/navi_pass"
                android:icon="@drawable/ic_change_pass"/>
        </menu>
    </item>
</menu>